# Contraduria

./: .clineignore  .gitignore  main.py  test.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  analytics.py  contracts.py  dependencies.py
backend/app/api/routers/: __init__.py  contracts.py  entities.py  health.py  modalities.py  stats.py  (+1 more)
backend/app/core/: __init__.py  config.py  error_handlers.py  exceptions.py
backend/app/database/: duckdb_connection.py
backend/app/db/: __init__.py  database.py
backend/app/marts/: __init__.py  base_mart.py  entity_mart.py  mart_builder.py  modality_mart.py  supplier_mart.py  temporal_mart.py
backend/app/repositories/: __init__.py  analytics_repository.py  contract_repository.py  entity_repository.py  statistics_repository.py  supplier_repository.py
backend/app/schemas/: __init__.py  analytics.py  common.py  contracts.py  entities.py  stats.py  suppliers.py
backend/app/services/: __init__.py  analytics_service.py  contract_service.py  entity_service.py  statistics_service.py  supplier_service.py
backend/etl/: __init__.py  checkpoint.py  metadata.py  orchestrator.py
backend/etl/extract/: __init__.py  socrata_extractor.py
backend/etl/load/: __init__.py  parquet_loader.py
backend/etl/transform/: __init__.py  socrata_transformer.py
backend/tests/: __init__.py
backend/tests/integration/: __init__.py  test_etl_pipeline.py  test_secop_api.py  test_socrata_api.py
backend/tests/unit/: __init__.py  test_parquet_loader.py  test_socrata_extractor.py  test_socrata_transformer.py
(+91 files in other folders)
