[project]
name = "contraduria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
