[project]
name = "contraduria"
version = "0.1.0"
description = "Portal de transparencia y análisis de contratación pública de Bogotá basado en SECOP II"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.3",
    "fastapi>=0.136.3",
    "h2>=4.3.0",
    "httpx[http2]>=0.28.1",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: tests that require external connectivity (Socrata API)",
]
